<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeekPercentage">

    <TextView
        android:id="@+id/week5"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="170dp"
        android:text="@string/textview1"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week4" />

    <TextView
        android:id="@+id/week4"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:text="@string/textview2"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week3" />

    <TextView
        android:id="@+id/week3"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:text="@string/textview3"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week2" />



    <TextView
        android:id="@+id/week2"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/textview4"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week1" />

    <TextView
        android:id="@+id/week1"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:text="@string/textview5"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>