<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BudgetActivity">

    <TextView
        android:id="@+id/showBudget"
        android:layout_width="373dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/ShowBudget"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addBudget"
        android:layout_width="368dp"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/AddYourBudget"
        app:layout_constraintEnd_toEndOf="@+id/showBudget"
        app:layout_constraintStart_toStartOf="@+id/showBudget"
        app:layout_constraintTop_toBottomOf="@+id/showBudget" />

    <Button
        android:id="@+id/buttonAddBudget"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="450dp"
        android:backgroundTint="@color/allow_button"
        android:onClick="addBudgetClick"
        android:text="@string/BudgetSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonChangeBudget"
        app:layout_constraintStart_toStartOf="@+id/addBudget"
        app:layout_constraintTop_toBottomOf="@+id/addBudget" />

    <Button
        android:id="@+id/buttonChangeBudget"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="450dp"
        android:backgroundTint="@color/ban_button"
        android:onClick="changeBudgetClick"
        android:text="@string/ExchengeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/addBudget"
        app:layout_constraintStart_toEndOf="@+id/buttonAddBudget"
        app:layout_constraintTop_toBottomOf="@+id/addBudget" />

</androidx.constraintlayout.widget.ConstraintLayout>