<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpenseActivity">

    <TextView
        android:id="@+id/expenseShow"
        android:layout_width="228dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:text="@string/YouCanAddExpense"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editExpense"
        android:layout_width="279dp"
        android:layout_height="71dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/EditExpense"
        android:inputType="numberDecimal"

        app:layout_constraintEnd_toEndOf="@+id/expenseShow"
        app:layout_constraintStart_toStartOf="@+id/expenseShow"
        app:layout_constraintTop_toBottomOf="@+id/expenseShow" />

    <Button
        android:id="@+id/buttonSubmitExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:onClick="addExpense"
        android:text="@string/SubmitExpense"
        app:layout_constraintEnd_toEndOf="@+id/editExpense"
        app:layout_constraintStart_toStartOf="@+id/editExpense"
        app:layout_constraintTop_toBottomOf="@+id/editExpense" />


</androidx.constraintlayout.widget.ConstraintLayout>